<?xml version="1.0"?>
<package>
  <name>urg_launch</name>
  <version>0.0.0</version>
  <description>The urg_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ma16025@shibaura-it.ac.jp">okutom</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>hokuyo3d</run_depend>


</package>
